--- a/composeCalendar/build.gradle
+++ b/composeCalendar/build.gradle
@@ -52,4 +52,6 @@ dependencies {
     implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.material3:material3'
     implementation "androidx.compose.ui:ui-tooling"
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.4.0'
+    implementation "androidx.compose.runtime:runtime-livedata"
 }
