--- a/settings.gradle
+++ b/settings.gradle
@@ -14,4 +14,4 @@ dependencyResolutionManagement {
 }
 rootProject.name = "ComposeCalendarExample"
 include ':app'
-include ':composeCalendar'
+include ':composeDatePicker'
