--- a/composeDatePicker/build.gradle
+++ b/composeDatePicker/build.gradle
@@ -54,4 +54,8 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling"
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.4.0'
     implementation "androidx.compose.runtime:runtime-livedata"
+
+    testImplementation "androidx.arch.core:core-testing:2.2.0"
+    testImplementation 'org.mockito:mockito-core:4.4.0'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
 }
