--- a/composeDatePicker/build.gradle
+++ b/composeDatePicker/build.gradle
@@ -10,6 +10,8 @@ android {
     defaultConfig {
         minSdk 24
         targetSdk 33
+        versionCode 1
+        versionName "1.0.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -35,7 +37,11 @@ android {
     buildFeatures {
         compose true
     }
-    testFixtures {enable true}
+    publishing {
+        singleVariant("release") {
+            withSourcesJar()
+        }
+    }
     buildToolsVersion '33.0.0'
 }
 
