--- a/composeDatePicker/build.gradle
+++ b/composeDatePicker/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
+    id 'maven-publish'
 }
 
 android {
@@ -37,11 +38,6 @@ android {
     buildFeatures {
         compose true
     }
-    publishing {
-        singleVariant("release") {
-            withSourcesJar()
-        }
-    }
     buildToolsVersion '33.0.0'
 }
 
@@ -69,4 +65,14 @@ dependencies {
     testImplementation "androidx.arch.core:core-testing:2.2.0"
     testImplementation 'org.mockito:mockito-core:4.4.0'
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
+}
+
+afterEvaluate {
+    publishing{
+        publications{
+            release(MavenPublication){
+                from components.release
+            }
+        }
+    }
 }
