--- a/composeDatePicker/build.gradle
+++ b/composeDatePicker/build.gradle
@@ -26,8 +26,8 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
         jvmTarget = '1.8'
@@ -67,7 +67,7 @@ afterEvaluate {
     publishing {
         publications {
             // Creates a Maven publication called "release".
-            release(MavenPublication) {
+            maven(MavenPublication) {
                 // Applies the component for the release build variant.
                 from components.release
 
@@ -76,6 +76,10 @@ afterEvaluate {
                 artifactId = "composedatepicker"
                 version = "1.0"
             }
+        }
+        repositories {
+            mavenLocal()
+            mavenCentral()
         }
     }
 }
